2005-08-05  Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        * WebCore.xcodeproj/project.pbxproj: Unchecked 'statics are thread safe' option.

2005-08-05  Geoffrey Garen  <ggaren@apple.com>

        -added layout test for fix to: <rdar://problem/4161606> JavaScript regular
        expressions with certain ranges of Unicode characters cause a crash

        Test cases added:

        * layout-tests/fast/js/regexp-big-unicode-ranges-expected.txt: Added.
        * layout-tests/fast/js/regexp-big-unicode-ranges.html: Added.

2005-08-05  David Hyatt  <hyatt@apple.com>

	Make sure that <wbr> and <nobr> are included as residual style tags.
	
        Reviewed by john

        Test cases added: fast/invalid/wbrlink.html

        * khtml/css/html4.css:
        * khtml/html/htmlparser.cpp:
        (HTMLParser::isResidualStyleTag):

2005-08-05  David Hyatt  <hyatt@apple.com>

	Fix for bugzilla bug 4289, a regression from the QualifiedName landing.  Make sure getNamedItemNS and
	removeNamedItemNS are case-insensitive in HTML documents.
	
        Reviewed by darin

        * khtml/xml/dom_elementimpl.cpp:
        (NamedAttrMapImpl::getNamedItemNS):
        (NamedAttrMapImpl::removeNamedItemNS):
        * khtml/xml/dom_elementimpl.h:
        * khtml/xml/dom_nodeimpl.cpp:
        * khtml/xml/dom_nodeimpl.h:
        (DOM::NamedNodeMapImpl::NamedNodeMapImpl):
        (DOM::NamedNodeMapImpl::~NamedNodeMapImpl):

2005-08-04  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by kocienda
        
        Fix for: 
        - <rdar://problem/4132360> HIM-8A428:Space key works like Return key in Mail application.
        - <rdar://problem/4122708> Mail: when composing new mail with a Korean input method, the first space doesn't work

        If the user terminates marked text with a space, a string including marked characters and a normal, 
        breaking space, is passed to WebCore in order to replace the previous marked sequence.  The fix ensures