@@ -1,3 +1,13 @@
+2005-08-06  Eric Seidel  <eseidel@apple.com>
+
+        Reviewed by darin.
+
+        * WebCore+SVG/DrawView.mm:
+        (+[DrawView setFilterSupportEnabled:]): Moved from DrawViewPrivate
+        (+[DrawView isFilterSupportEnabled]): Moved from DrawViewPrivate
+        One half of fix for toggling filter support.
+        http://bugzilla.opendarwin.org/show_bug.cgi?id=4252
+
 2005-08-05  Adele Peterson  <adele@apple.com>
 
         Reviewed by Darin.
